[package]
name = "alloy-signer-trezor"
version = "1.6.3"
edition = "2021"
description = "Ethereum Trezor signer with EIP-712 support"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-consensus = { version = "1.6", default-features = false, features = ["std"] }
alloy-network = "1.6"
alloy-primitives = "1.6"
alloy-signer = { version = "1.6", features = ["eip712"] }
alloy-sol-types = { version = "1.6", features = ["std"] }
alloy-dyn-abi = { version = "1.6", features = ["std", "eip712"] }

trezor-client = { version = "=0.1.5", default-features = false, features = ["ethereum"] }

async-trait = "0.1"
semver = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[patch.crates-io]
trezor-client = { path = "../trezor-firmware/rust/trezor-client" }
